--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,56 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="me.androidbox.travelmate.MainActivity"
-    android:background="@drawable/landing_pic">
+    tools:context="me.androidbox.travelmate.MainActivity">
 
-    <Space
-        android:id="@+id/placeHolder"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_centerHorizontal="true"/>
-
-    <TextView
-        android:id="@+id/tvLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@id/placeHolder"
-        android:layout_toStartOf="@id/placeHolder"
-        android:layout_marginBottom="12dp"
-        android:gravity="center_horizontal"
-        android:text="LOGIN"
-        android:textColor="@color/textLanding"
-        android:textSize="18sp"
-        android:fontFamily="sans-serif-medium"/>
-
-    <TextView
-        android:id="@+id/tvSignUp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_toRightOf="@id/placeHolder"
-        android:layout_toEndOf="@id/placeHolder"
-        android:layout_marginBottom="12dp"
-        android:gravity="center_horizontal"
-        android:text="SIGN UP"
-        android:textColor="@color/textLanding"
-        android:textSize="18sp"
-        android:fontFamily="sans-serif-medium"/>
-
-    <View
+    <FrameLayout
+        android:id="@+id/picture_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:layout_above="@id/tvLogin"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginBottom="12dp"
-        android:background="@color/line"/>
+        android:layout_height="match_parent">
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/login_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </FrameLayout>
 
 </RelativeLayout>
