--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,7 @@
 
     <color name="line">#88ffffff</color>
     <color name="textLanding">#99ffffff</color>
+
+    <!-- 500 Blue -->
+    <color name="button">#992196f3</color>
 </resources>
