--- a/app/src/main/res/layout/screen_slide.xml
+++ b/app/src/main/res/layout/screen_slide.xml
@@ -12,12 +12,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="Don't forget to sign in"
-        android:textSize="22sp"
-        android:textColor="@android:color/black"/>
+   <include
+       layout="@layout/login"
+       android:layout_height="wrap_content"
+       android:layout_width="match_parent"
+       android:layout_alignParentBottom="true"/>
 </RelativeLayout>
 
