Added circles and animitions to scale up and down the circles for progress

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -12,6 +12,7 @@
         android:src="@drawable/lpage1" />
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
@@ -21,5 +22,11 @@
         android:textColor="@android:color/white"
         android:fontFamily="sans-serif-light"/>
 
+    <include
+        layout="@layout/circle_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/title"/>
 
 </RelativeLayout>
