--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -12,6 +12,7 @@
         android:src="@drawable/lpage4" />
 
     <TextView
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
@@ -20,5 +21,12 @@
         android:textSize="24dp"
         android:textColor="@android:color/white"
         android:fontFamily="sans-serif-light"/>
+
+    <include
+        layout="@layout/circle_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/title"/>
 
 </RelativeLayout>
