--- a/app/src/main/res/anim/scaledown_circle.xml
+++ b/app/src/main/res/anim/scaledown_circle.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <scale xmlns:android="http://schemas.android.com/apk/res/android"
-       android:duration="500"
+       android:duration="1000"
        android:fromXScale="1.0"
        android:fromYScale="1.0"
-       android:toXScale="0.1"
-       android:toYScale="0.1"
+       android:toXScale="0.5"
+       android:toYScale="0.5"
        android:interpolator="@android:anim/accelerate_interpolator"
        android:pivotX="50%"
-       android:pivotY="50%">
+       android:pivotY="50%"
+       android:fillAfter="true">
 </scale>
+
