--- a/app/src/main/res/layout/circle_progress.xml
+++ b/app/src/main/res/layout/circle_progress.xml
@@ -10,10 +10,9 @@
 
     <ImageView
         android:id="@+id/circle1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/title"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
         android:src="@drawable/circle_enabled"/>
 
     <Space
@@ -24,8 +23,7 @@
         android:id="@+id/circle2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/title"
+        android:layout_gravity="center"
         android:src="@drawable/circle_enabled"/>
 
     <Space
@@ -36,8 +34,7 @@
         android:id="@+id/circle3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/title"
+        android:layout_gravity="center"
         android:src="@drawable/circle_enabled"/>
 
     <Space
@@ -48,8 +45,7 @@
         android:id="@+id/circle4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/title"
+        android:layout_gravity="center"
         android:src="@drawable/circle_enabled"/>
 
     <Space
@@ -60,10 +56,7 @@
         android:id="@+id/circle5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/title"
+        android:layout_gravity="center"
         android:src="@drawable/circle_enabled"/>
-
-
 
 </LinearLayout>
