Working scales for left and right navigation. Need to change the color gradually during navigation

--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -22,11 +22,73 @@
         android:textColor="@android:color/white"
         android:fontFamily="sans-serif-light"/>
 
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp"
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true">
+
+    <ImageView
+        android:id="@+id/circle1"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_gravity="center"
+        android:src="@drawable/circle_enabled"/>
+
+    <Space
+        android:layout_width="10dp"
+        android:layout_height="10dp"/>
+
+    <ImageView
+        android:id="@+id/circle2"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_gravity="center"
+        android:src="@drawable/circle_enabled"/>
+
+    <Space
+        android:layout_width="10dp"
+        android:layout_height="10dp"/>
+
+    <ImageView
+        android:id="@+id/circle3"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_gravity="center"
+        android:src="@drawable/circle_enabled"/>
+
+    <Space
+        android:layout_width="10dp"
+        android:layout_height="10dp"/>
+
+    <ImageView
+        android:id="@+id/circle4"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_gravity="center"
+        android:src="@drawable/circle_enabled"/>
+
+    <Space
+        android:layout_width="10dp"
+        android:layout_height="10dp"/>
+
+    <ImageView
+        android:id="@+id/circle5"
+        android:layout_width="10dp"
+        android:layout_height="10dp"
+        android:layout_gravity="center"
+        android:src="@drawable/circle_enabled"/>
+</LinearLayout>
+
+<!--
     <include
         layout="@layout/circle_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/title"/>
+-->
 
 </RelativeLayout>
