--- a/app/src/main/res/anim/scaleup_circle.xml
+++ b/app/src/main/res/anim/scaleup_circle.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <scale xmlns:android="http://schemas.android.com/apk/res/android"
-       android:duration="1000"
-       android:fromXScale="0.1"
-       android:fromYScale="0.1"
-       android:toXScale="1.0"
-       android:toYScale="1.0"
-       android:interpolator="@android:anim/accelerate_interpolator"
-       android:pivotX="50%"
-       android:pivotY="50%">
+    android:duration="500"
+    android:fillAfter="true"
+    android:fillEnabled="true"
+    android:fromXScale="0.5"
+    android:fromYScale="0.5"
+    android:interpolator="@android:anim/accelerate_interpolator"
+    android:pivotX="50%"
+    android:pivotY="50%"
+    android:toXScale="1.0"
+    android:toYScale="1.0">
 </scale>
 
