--- a/app/src/main/res/anim/scaleup_circle.xml
+++ b/app/src/main/res/anim/scaleup_circle.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<scale xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="500"
-    android:fillAfter="true"
-    android:fillEnabled="true"
-    android:fromXScale="0.5"
-    android:fromYScale="0.5"
-    android:interpolator="@android:anim/accelerate_interpolator"
-    android:pivotX="50%"
-    android:pivotY="50%"
-    android:toXScale="1.0"
-    android:toYScale="1.0">
-</scale>
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+     android:duration="500"
+     android:fillAfter="true"
+     android:fillEnabled="true"
+     android:interpolator="@android:anim/decelerate_interpolator">
+
+    <scale
+        android:fromXScale="0.2"
+        android:fromYScale="0.2"
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:toXScale="1.0"
+        android:toYScale="1.0">
+    </scale>
+
+    <alpha
+        android:fromAlpha="0.8"
+        android:toAlpha="1.0">
+    </alpha>
+</set>
+
+
 
