--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -1,4 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,86 +10,77 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/lpage3" />
+        android:src="@drawable/lpage3"/>
 
     <TextView
         android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
+        android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:text="Access maps, curated\ncollections and essential tips"
-        android:textSize="24dp"
         android:textColor="@android:color/white"
-        android:fontFamily="sans-serif-light"/>
+        android:textSize="24sp"/>
 
     <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="60dp"
-        android:orientation="horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true">
-
-    <ImageView
-        android:id="@+id/circle1"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        android:layout_gravity="center"
-        android:src="@drawable/circle_enabled"/>
-
-    <Space
-        android:layout_width="10dp"
-        android:layout_height="10dp"/>
-
-    <ImageView
-        android:id="@+id/circle2"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        android:layout_gravity="center"
-        android:src="@drawable/circle_enabled"/>
-
-    <Space
-        android:layout_width="10dp"
-        android:layout_height="10dp"/>
-
-    <ImageView
-        android:id="@+id/circle3"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_gravity="center"
-        android:src="@drawable/circle_enabled"/>
-
-    <Space
-        android:layout_width="10dp"
-        android:layout_height="10dp"/>
-
-    <ImageView
-        android:id="@+id/circle4"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        android:layout_gravity="center"
-        android:src="@drawable/circle_enabled"/>
-
-    <Space
-        android:layout_width="10dp"
-        android:layout_height="10dp"/>
-
-    <ImageView
-        android:id="@+id/circle5"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
-        android:layout_gravity="center"
-        android:src="@drawable/circle_enabled"/>
-</LinearLayout>
-
-<!--
-    <include
-        layout="@layout/circle_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/title"/>
--->
+        android:layout_marginBottom="60dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/circle1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/circle_disabled"/>
+
+        <Space
+            android:layout_width="10dp"
+            android:layout_height="10dp"/>
+
+        <ImageView
+            android:id="@+id/circle2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/circle_disabled"/>
+
+        <Space
+            android:layout_width="10dp"
+            android:layout_height="10dp"/>
+
+        <ImageView
+            android:id="@+id/circle3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/circle_enabled"/>
+
+        <Space
+            android:layout_width="10dp"
+            android:layout_height="10dp"/>
+
+        <ImageView
+            android:id="@+id/circle4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/circle_disabled"/>
+
+        <Space
+            android:layout_width="10dp"
+            android:layout_height="10dp"/>
+
+        <ImageView
+            android:id="@+id/circle5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:src="@drawable/circle_disabled"/>
+    </LinearLayout>
 
 </RelativeLayout>
