--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -32,10 +32,10 @@
 
         <ImageView
             android:id="@+id/circle1"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/circle_enabled"/>
+            android:src="@drawable/circle_disabled"/>
 
         <Space
             android:layout_width="10dp"
@@ -43,10 +43,10 @@
 
         <ImageView
             android:id="@+id/circle2"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/circle_enabled"/>
+            android:src="@drawable/circle_disabled"/>
 
         <Space
             android:layout_width="10dp"
@@ -54,10 +54,10 @@
 
         <ImageView
             android:id="@+id/circle3"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/circle_enabled"/>
+            android:src="@drawable/circle_disabled"/>
 
         <Space
             android:layout_width="10dp"
@@ -65,8 +65,8 @@
 
         <ImageView
             android:id="@+id/circle4"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:src="@drawable/circle_enabled"/>
 
@@ -76,20 +76,9 @@
 
         <ImageView
             android:id="@+id/circle5"
-            android:layout_width="10dp"
-            android:layout_height="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/circle_enabled"/>
+            android:src="@drawable/circle_disabled"/>
     </LinearLayout>
-
-
-<!--
-    <include
-        layout="@layout/circle_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/title"/>
--->
-
 </RelativeLayout>
