--- a/app/src/main/res/layout/circle_progress.xml
+++ b/app/src/main/res/layout/circle_progress.xml
@@ -2,15 +2,27 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="160dp"
+    android:layout_height="80dp"
+    android:padding="12dp"
     android:gravity="center_horizontal"
     android:background="@android:color/transparent">
 
     <ImageView
+        android:id="@+id/circle0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/circle_enabled"/>
+
+    <Space
+        android:layout_width="10dp"
+        android:layout_height="10dp"/>
+
+    <ImageView
         android:id="@+id/circle1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:src="@drawable/circle_enabled"/>
 
@@ -42,17 +54,6 @@
 
     <ImageView
         android:id="@+id/circle4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:src="@drawable/circle_enabled"/>
-
-    <Space
-        android:layout_width="10dp"
-        android:layout_height="10dp"/>
-
-    <ImageView
-        android:id="@+id/circle5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
