--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -23,7 +23,7 @@
         android:textColor="@android:color/white"
         android:textSize="24sp"/>
 
-    <LinearLayout
+ <!--   <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -82,5 +82,6 @@
             android:layout_gravity="center"
             android:src="@drawable/circle_disabled"/>
     </LinearLayout>
+-->
 
 </RelativeLayout>
