--- a/app/src/main/res/layout/screen_slide.xml
+++ b/app/src/main/res/layout/screen_slide.xml
@@ -12,10 +12,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-   <include
-       layout="@layout/login"
-       android:layout_height="wrap_content"
-       android:layout_width="match_parent"
-       android:layout_alignParentBottom="true"/>
+    <include
+        android:id="@+id/loginInclude"
+        layout="@layout/login"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"/>
+
+    <include
+        layout="@layout/circle_progress"
+        android:layout_height="40dp"
+        android:layout_width="match_parent"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="24dp"
+        android:layout_above="@id/loginInclude"/>
+
 </RelativeLayout>
 
