--- a/app/src/main/res/layout/fragment_offline.xml
+++ b/app/src/main/res/layout/fragment_offline.xml
@@ -86,6 +86,7 @@
 -->
 
     <Button
+        android:id="@+id/btnExploreCities"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
