--- a/app/src/main/res/layout/screen_slide.xml
+++ b/app/src/main/res/layout/screen_slide.xml
@@ -12,6 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+    <Button
+        android:id="@+id/btnExploreCities"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="110dp"
+        android:layout_centerInParent="true"
+        android:text="Explore cities"
+        android:textSize="18sp"
+        android:textColor="@android:color/white"
+        android:background="@drawable/button"
+        android:fontFamily="sans-serif-medium"/>
+
     <include
         android:id="@+id/loginInclude"
         layout="@layout/login"
