--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,8 +6,9 @@
     tools:context="me.androidbox.travelmate.view.MainFragment">
 
     <android.support.design.widget.AppBarLayout
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@android:color/transparent">
 
     <include
         android:layout_height="wrap_content"
