--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.Toolbar
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:background="@android:color/transparent"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark">
+    android:theme="@style/ThemeOverlay.AppCompat.Dark"
+    app:contentInsetStart="0dp"
+    app:elevation="0dp">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -34,7 +38,7 @@
             android:layout_marginRight="16dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_settings_black_36dp" />
-
     </FrameLayout>
+
 </android.support.v7.widget.Toolbar>
 
