--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,19 +1,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="me.androidbox.travelmate.view.MainFragment">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content">
+    <!-- <android.support.design.widget.AppBarLayout
+         android:layout_height="match_parent"
+         android:layout_width="wrap_content">-->
 
-    <include
-        android:layout_height="wrap_content"
+    <ScrollView
         android:layout_width="match_parent"
-        layout="@layout/toolbar"/>
+        android:layout_height="match_parent">
 
-    </android.support.design.widget.AppBarLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <include
+                layout="@layout/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <include layout="@layout/my_city_guides" />
+
+        </LinearLayout>
+    </ScrollView>
+
+    <!--   </android.support.design.widget.AppBarLayout>-->
 
 </LinearLayout>
