--- a/app/src/main/res/layout/toolbar_scene_expanded.xml
+++ b/app/src/main/res/layout/toolbar_scene_expanded.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar
+    android:id="@+id/toolbar"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:background="@android:color/transparent"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     app:contentInsetStart="0dp"
-    app:elevation="0dp"
-    app:layout_collapseMode="pin">
+    app:elevation="0dp">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -19,27 +18,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start|center_vertical"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginStart="32dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_search_black_36dp" />
+            android:src="@drawable/ic_search_black_36dp"/>
 
         <ImageView
             android:layout_width="133dp"
             android:layout_height="96dp"
             android:layout_gravity="center_vertical|center"
             android:scaleType="fitCenter"
-            android:src="@drawable/lonelyplanetlogofinal" />
+            android:src="@drawable/lonelyplanetlogofinal"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_settings_black_36dp" />
+            android:src="@drawable/ic_settings_black_36dp"/>
     </FrameLayout>
-
 </android.support.v7.widget.Toolbar>
-
