--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,7 +5,7 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:background="@android:color/transparent"
+    android:background="@android:color/white"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     app:contentInsetStart="0dp"
     app:elevation="0dp"
@@ -16,15 +16,17 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:id="@+id/ivSearch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start|center_vertical"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_search_black_36dp" />
 
         <ImageView
+            android:id="@+id/ivLogo"
             android:layout_width="133dp"
             android:layout_height="96dp"
             android:layout_gravity="center_vertical|center"
@@ -32,11 +34,12 @@
             android:src="@drawable/lonelyplanetlogofinal" />
 
         <ImageView
+            android:id="@+id/ivSettings"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end|center_vertical"
-            android:layout_marginEnd="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginRight="40dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_settings_black_36dp" />
     </FrameLayout>
