--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -9,7 +9,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     app:contentInsetStart="0dp"
     app:elevation="0dp"
-    app:layout_collapseMode="pin">
+    app:layout_scrollFlags="scroll|enterAlways">
 
     <FrameLayout
         android:layout_width="match_parent"
