Added transparent status bar

--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -9,7 +9,8 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     app:contentInsetStart="0dp"
     app:elevation="0dp"
-    app:layout_collapseMode="pin">
+    app:layout_collapseMode="pin"
+    android:fitsSystemWindows="true">
 
     <FrameLayout
         android:layout_width="match_parent"
